# Trailblazers

./: .gitignore  README.md  workspace-publish-check.md
.github/workflows/: trailblazers-launcher-build.yml
2026-04-17-creating-a-game-and-i-want/: _config.yml  gallery.md  index.md  universe.md  updates.md
2026-04-17-creating-a-game-and-i-want/_layouts/: default.html
2026-04-17-creating-a-game-and-i-want/_posts/: 2026-04-17-building-the-universe.md  2026-04-17-welcome-to-trailblazers.md
launcher/: README.md  release-manifest.example.json
launcher/docs/: release-workflow.md
launcher/scripts/: dev.sh  prepare_release.py  prepare_release_test.py  test.sh
launcher/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: install_state.rs  installer.rs  launcher.rs  lib.rs  main.rs  manifest.rs
launcher/ui/: app.js  index.html  launcher-state.js  launcher-state.test.mjs  news-feed.json  styles.css
trailblazers_trials/: README.md
trailblazers_trials/game/: audio.rpy  chapter_registry.py  characters.rpy  combat_data.py  combat_model.py  exploration_data.py  gui.rpy  hotspot_scene_data.py  hotspot_scene_model.py  images.rpy  inventory.py  options.rpy  scene_objectives.py  scene_objectives_data.py  screens.rpy  script.rpy  variables.rpy
trailblazers_trials/tests/: test_chapter_completion.py  test_chapter_registry.py  test_chapter_two_scaffold.py  test_dialogue_layout.py  test_hotspot_scene_model.py  test_menu_layout.py  test_menu_routing.py  test_menu_support.py  (+2 more)
trailblazers_trials_renpy/: README.md
(+56 files in other folders)
