[package]
name = "trailblazers-launcher"
version = "0.1.0"
description = "Trailblazers Launcher"
authors = ["D0th3n"]
edition = "2021"

[lib]
name = "trailblazers_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tempfile = "3"
zip = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
